<h5>2.26 RC-1 [2017-08-09]</h5>
<hr>
+ fixed ContactConfigurator (aerograf/mamba)
+ updated pre_update functions (mamba)
+ fixed anonymous access (aerograf/mamba)
+ short array syntax (mamba)
+ fixed bug for default sender mail address, if there are no departments (goffy)
+ fixed bug with missing additional infos in sended mail (alian/goffy)

<h5>2.25 Final [2017-08-04]</h5>
<hr>
+ added missing $moduleDirName in header.php (mamba)
+ rename Help file extensions to .tpl (mamba) 


<h5>2.25 RC 1 [2017-06-30]</h5>
<hr>
- Updates for PayPal changes (zyspec)
- added Contributing.md (mamba)
- moved functions to Utility class (mamba)
- added option to save to DB and/or email (mamba)
- added install checks for PHP 5.5 and XOOPS 2.5.8 (mamba)
- started conversion to XMF (mamba)
    - Xmf\Request
    - updated addInfoBoxLine entries (mamba)
    - displayNavigation(basename(__FILE__))  (mamba)
    - changed to ->displayButton('left') (mamba)


<h5>2.25 beta 2 [NOT RELEASED]</h5>
<hr>
- removed @version (mamba)
- code cosmetics, PSR-2 (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- renamed templates from .html to .tpl (mamba)
- moved /images to /assets (mamba)
- renamed $admin_class to $adminObject (mamba)
- removed /admin/header.php (mamba)
- removed /admin/footer.php (mamba)
- replaced $xoopsTpl with $GLOBALS['xoopsTpl'] (mamba)
- added type annotations for Handlers (mamba)
- added few PhpDocs  (mamba)
- replaced calls to contactCleanVars with XoopsRequest (mamba)
- changed $hModule->getByDirname to static call $hModule::getByDirname (mamba)
- updated deprecated HTML to CSS (mamba)
- removed exit(); redirect_header has it already (mamba)
- renamed /admin/contact.php to main.php (mamba)
- renamed contact_slogo.png to logoModule.png (mamba)