@@ -205,4 +205,10 @@ function xoops_module_update_contact(XoopsModule $module, $previousVersion = nul
         $gpermHandler = xoops_getHandler('groupperm');
         return $gpermHandler->deleteByModule($module->getVar('mid'), 'item_read');
     }
+    
+     if ($previousVersion < 227) {
+        // Add contact_skype
+        $sql = 'ALTER TABLE `' . $xoopsDB->prefix('contact') . "` ADD `contact_skype` VARCHAR(255) NULL AFTER `contact_icq`";
+        $xoopsDB->query($sql);
+    }
 }
